--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -4,7 +4,7 @@
 ```
 1、整理具体组件JVM配置 1h
 2、整理具体组件现有配置 (对比apollo与ops配置的差异) 3h
-3、编写部署脚本 （修改组件资源限制、配置hpa与父本书） 10h
+3、编写部署脚本 （修改组件资源限制、配置hpa与副本数） 10h
 4、部署 5h
 5、3ps标签整理  2h
 
