--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -20,12 +20,11 @@
 ```
 1、区分apollo配置与ops配置渲染可使用配置 2h
 2、编写描述文件（修改组件资源限制、配置hpa与副本数+3ps） 4h
-3、
 3、初始化RDB数据库 (30m)
 4、部署 1h
 
 其他工作
-1、刷Jenkins+部署Argo+elk+监控 1h
+1、初始化CMDB、刷Jenkins+部署Argo+elk+监控 1h
 ```
 
 
