--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -34,7 +34,7 @@
 
 [腾讯云ES output不能使用 document_type](https://gitlab.hd123.com/qianfanops/toolset_miniso/-/merge_requests/131/diffs)
 
-[](http://jira6.app.hd123.cn/jira/browse/DOPS-54355)
+[ingress发布的问题](http://jira6.app.hd123.cn/jira/browse/DOPS-54355)
 
 
 1、应用资源评估、3PIS （开发提前开始）
