--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -30,7 +30,7 @@
 
 总耗时：9.3h
 
-其他耗时：不同云厂商云资源操作方法不一、
+其他耗时：不同云厂商云资源操作方法不一、出问题容易卡住
 
 [腾讯云ES output不能使用 document_type](https://gitlab.hd123.com/qianfanops/toolset_miniso/-/merge_requests/131/diffs)
 
