--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -36,14 +36,7 @@
 
 [ingress发布的问题](http://jira6.app.hd123.cn/jira/browse/DOPS-54355)
 
-
-
-
-
-
-1、应用资源评估、3PIS （开发提前开始）
-2、dev业务配置
-3、部署脚本耗时较长
+容器网段
 
 4、不同云厂商之前的操作不一，出问题容易卡住
 
