--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -15,7 +15,7 @@
 部署总耗时：23h
 
 
-名创：
+## 名创
 
 ```
 1、区分apollo配置与ops配置渲染可使用配置 2h
@@ -30,7 +30,7 @@
 
 总耗时：9.3h
 
-其他耗时：不同云厂商云资源操作方法不一、使用账户权限较小，出问题容易卡住无法排查
+## 其他耗时：不同云厂商云资源操作方法不一、使用账户权限较小，出问题容易卡住无法排查
 
 [腾讯云ES output不能使用 document_type](https://gitlab.hd123.com/qianfanops/toolset_miniso/-/merge_requests/131/diffs)
 
