--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -42,9 +42,20 @@
 
 
 
-期望效果：
+## 期望效果：
 
-1、整理具体组件JVM配置 1h
-2、整理具体组件现有配置 (对比apollo与ops配置的差异) 4h
+1、有统一的资源配置模板，可配初始值 ; 参考
+
+```
+select app,hpa_min, hpa_max, cpu_requests_m, cpu_limits_m,mem_requests_mi,mem_limits_mi,jvm_opts   from k8s_container_config where project='daojia' and app in (
+  'ras-service',  'sas-service',  'config-service',  'gateway-service','spms-console-server', 'spms-engine-server', 'spms-sync-server' , 'pas-service'
+) and image not like '%filebeat%' and image not like '%ogging-clean%'
+```
+
+2、有统一的具体组件配置模板
+
+(1) 迁移老环境近k8：envfile文件中能明确区分apollo配置与 ops配置
+(2) 新环境近k8：有统一的ops与apollo配置模板 
+ 
 3、编写部署脚本 （修改组件资源限制、配置hpa与副本数） 10h
 
