--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -57,7 +57,10 @@ select app,hpa_min, hpa_max, cpu_requests_m, cpu_limits_m,mem_requests_mi,mem_li
 (1) 迁移老环境近k8：envfile文件中能明确区分apollo配置与 ops配置
 (2) 新环境近k8：有统一的ops与apollo配置模板 
  
-3、编写部署脚本 （修改组件资源限制、配置hpa与副本数） 10h
+3、编写部署脚本 （修改组件资源限制、配置hpa与副本数）
 
-目前
+目前修改大多依靠人工，错误返工率较高 期望能有类似于变量模板替换
+
+
+
 
