--- a/默认归类/绿叶.md
+++ b/默认归类/绿叶.md
@@ -61,6 +61,11 @@ select app,hpa_min, hpa_max, cpu_requests_m, cpu_limits_m,mem_requests_mi,mem_li
 
 目前修改大多依靠人工，错误返工率较高 期望能有类似于变量模板替换
 
+4、rdb镜像
+
+？？
+
+
 
 
 
