--- a/数据库初始化.md
+++ b/数据库初始化.md
@@ -20,3 +20,7 @@ SET GLOBAL innodb_large_prefix=on;
 
 
 ```
+python -m pip install --upgrade pip==18.0
+
+pip install -i http://pypi.douban.com/simple/ --trusted-host pypi.douban.com requests docker
+```
