--- a/数据库初始化.md
+++ b/数据库初始化.md
@@ -11,13 +11,15 @@ SET GLOBAL innodb_large_prefix=on;
 
 ## 部署基础组件
 
-### 报错
+### 报错汇总
+
 
 ```
 13:35:44  TASK [redis3 : Log into dockerhub] *********************************************
 13:35:44  fatal: [crm-int]: FAILED! => {"changed": false, "msg": "Failed to import the required Python library (Docker SDK for Python: docker (Python >= 2.7) or docker-py (Python 2.6)) on crm6_train's Python /usr/bin/python. Please read module documentation and install in the appropriate location. If the required library is installed, but Ansible is using the wrong Python interpreter, please consult the documentation on ansible_python_interpreter, for example via `pip install docker` or `pip install docker-py` (Python 2.6). The error was: No module named requests.exceptions"}
 ```
 
+应用服务器执行
 
 ```
 python -m pip install --upgrade pip==18.0
